[gd_scene load_steps=2 format=3 uid="uid://character_creation"]

[ext_resource type="Script" path="res://scripts/CharacterCreation.gd" id="1_char_creation"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_char_creation")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Create Your Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2
text = "Name:"
custom_minimum_size = Vector2(100, 0)

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter character name"

[node name="ClassContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ClassLabel" type="Label" parent="VBoxContainer/ClassContainer"]
layout_mode = 2
text = "Class:"

[node name="ClassOptionButton" type="OptionButton" parent="VBoxContainer/ClassContainer"]
layout_mode = 2

[node name="ClassDescription" type="Label" parent="VBoxContainer/ClassContainer"]
layout_mode = 2
text = "Masters of martial combat, skilled with many weapons and armor."
autowrap_mode = 2

[node name="RaceContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RaceLabel" type="Label" parent="VBoxContainer/RaceContainer"]
layout_mode = 2
text = "Race:"

[node name="RaceOptionButton" type="OptionButton" parent="VBoxContainer/RaceContainer"]
layout_mode = 2

[node name="RaceDescription" type="Label" parent="VBoxContainer/RaceContainer"]
layout_mode = 2
text = "Versatile and ambitious, humans are the most adaptable race. +1 to all stats."
autowrap_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Ability Scores (Base + Racial = Total)"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Points Remaining: 27"
horizontal_alignment = 1

[node name="StrContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="StrLabel" type="Label" parent="VBoxContainer/StatsContainer/StrContainer"]
layout_mode = 2
text = "Strength:"
custom_minimum_size = Vector2(100, 0)

[node name="StrMinus" type="Button" parent="VBoxContainer/StatsContainer/StrContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="StrValue" type="Label" parent="VBoxContainer/StatsContainer/StrContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="StrPlus" type="Button" parent="VBoxContainer/StatsContainer/StrContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="DexContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="DexLabel" type="Label" parent="VBoxContainer/StatsContainer/DexContainer"]
layout_mode = 2
text = "Dexterity:"
custom_minimum_size = Vector2(100, 0)

[node name="DexMinus" type="Button" parent="VBoxContainer/StatsContainer/DexContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="DexValue" type="Label" parent="VBoxContainer/StatsContainer/DexContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="DexPlus" type="Button" parent="VBoxContainer/StatsContainer/DexContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="ConContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="ConLabel" type="Label" parent="VBoxContainer/StatsContainer/ConContainer"]
layout_mode = 2
text = "Constitution:"
custom_minimum_size = Vector2(100, 0)

[node name="ConMinus" type="Button" parent="VBoxContainer/StatsContainer/ConContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="ConValue" type="Label" parent="VBoxContainer/StatsContainer/ConContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="ConPlus" type="Button" parent="VBoxContainer/StatsContainer/ConContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="IntContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="IntLabel" type="Label" parent="VBoxContainer/StatsContainer/IntContainer"]
layout_mode = 2
text = "Intelligence:"
custom_minimum_size = Vector2(100, 0)

[node name="IntMinus" type="Button" parent="VBoxContainer/StatsContainer/IntContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="IntValue" type="Label" parent="VBoxContainer/StatsContainer/IntContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="IntPlus" type="Button" parent="VBoxContainer/StatsContainer/IntContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="WisContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="WisLabel" type="Label" parent="VBoxContainer/StatsContainer/WisContainer"]
layout_mode = 2
text = "Wisdom:"
custom_minimum_size = Vector2(100, 0)

[node name="WisMinus" type="Button" parent="VBoxContainer/StatsContainer/WisContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="WisValue" type="Label" parent="VBoxContainer/StatsContainer/WisContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="WisPlus" type="Button" parent="VBoxContainer/StatsContainer/WisContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="ChaContainer" type="HBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="ChaLabel" type="Label" parent="VBoxContainer/StatsContainer/ChaContainer"]
layout_mode = 2
text = "Charisma:"
custom_minimum_size = Vector2(100, 0)

[node name="ChaMinus" type="Button" parent="VBoxContainer/StatsContainer/ChaContainer"]
layout_mode = 2
text = "-"
custom_minimum_size = Vector2(30, 0)

[node name="ChaValue" type="Label" parent="VBoxContainer/StatsContainer/ChaContainer"]
layout_mode = 2
text = "8"
custom_minimum_size = Vector2(80, 0)
horizontal_alignment = 1

[node name="ChaPlus" type="Button" parent="VBoxContainer/StatsContainer/ChaContainer"]
layout_mode = 2
text = "+"
custom_minimum_size = Vector2(30, 0)

[node name="RollStatsButton" type="Button" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Roll Random Stats (4d6 drop lowest)"

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Character"

[node name="LoadButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load Character"
